src/test/ui/issues/issue-34334.stderr
error: only path types can be used in associated type constraints
  --> $DIR/issue-34334.rs:2:17
   |
LL |     let sr: Vec<(u32, _, _) = vec![];
   |         --      ^^^^^^^^^^^
   |         |
   |         while parsing the type for `sr`

error[E0277]: a value of type `Vec<(u32, _, _)>` cannot be built from an iterator over elements of type `()`
  --> $DIR/issue-34334.rs:4:87
   |
LL |     let sr2: Vec<(u32, _, _)> = sr.iter().map(|(faction, th_sender, th_receiver)| {}).collect();
   |                                                                                       ^^^^^^^ value of type `Vec<(u32, _, _)>` cannot be built from `std::iter::Iterator<Item=()>`
   |
   = help: the trait `FromIterator<()>` is not implemented for `Vec<(u32, _, _)>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
